# bsvs-server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-api  Dockerfile-worker  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  deploy-base.yml  deploy.yml  test-builds.yml
archive/: Dockerfile  docker-compose.yaml
archive/.github/workflows/: integrate.yml
archive/gateway/: compatible.py  main.py
archive/gateway/spec/: openapi_3_1_0_generated.yaml
archive/shared/: data_model.py  database.py  io.py  utils.py
archive/worker/: data_generator.py  job.py  main.py
assets/docker/scripts/: build_microservice.sh  deploy_all.sh  deploy_microservice.sh
biosim_server/: config.py  dependencies.py  log_config.py
biosim_server/api/: main.py  openapi_spec.py
biosim_server/api/spec/: openapi_3_1_0_generated.yaml
biosim_server/biosim1/: api_client.py  biosim_service.py  biosim_service_rest.py  models.py  simdata_api_client.py
biosim_server/biosim_omex/: __init__.py  database.py  models.py  omex_storage.py
biosim_server/biosim_runs/: __init__.py  activities.py  biosim_service.py  database.py  models.py  workflows.py
biosim_server/biosim_verify/: __init__.py  activities.py  models.py  omex_verify_workflow.py  runs_verify_workflow.py
biosim_server/common/biosim1_client/: __init__.py  biosim_service.py  biosim_service_rest.py  models.py
biosim_server/common/database/: data_models.py  database_service.py  (+1 more)
biosim_server/database/: database_service.py  database_service_mongo.py  models.py  mongo_database_service.py
biosim_server/io/: file_service.py  file_service_S3.py  file_service_local.py  local_file_service.py  model.py  s3_aiobotocore.py
biosim_server/misc/: biosim_database.py  hello.py  trigger_workflow.py
biosim_server/omex_archives/: __init__.py  database.py  omex_storage.py
biosim_server/worker/: worker_main.py
biosim_server/workflows/: activities.py  biosim_activities.py  omex_sim_workflow.py  omex_verify_workflow.py  trigger_sim_workflow.py  trigger_verify_workflow.py  worker_main.py
gateway/: Dockerfile-api  data_model.py  main.py
gateway/spec/: openapi_3_1_0_generated.yaml
kustomize/: README_minikube.md
kustomize/base/: api.yaml  gateway.yaml  kustomization.yaml  mongodb.yaml  worker.yaml
kustomize/cluster/: postgresql-deployment.yaml  postgresql-service.yaml  temporal-admin-tools-deployment.yaml  temporal-cm0-configmap.yaml  temporal-deployment.yaml  temporal-service.yaml
kustomize/scripts/: build_and_push.sh  sealed_secret_shared.sh
local_data/: BIOMD0000000010_tellurium_Negative_feedback_and_ultrasen.omex  OmexVerifyWorkflowOutput_expected.json  RunsVerifyWorkflowOutput_expected.json  metadata_67817a2e1f52f47f628af971.json  metadata_67817a2eba5a3f02b9f2938d.json  sim_run_67817a2e1f52f47f628af971.json  sim_run_67817a2eba5a3f02b9f2938d.json
scripts/: simulator_versions.ndjson  simulator_versions.sh
shared/: data_model.py  io.py  io_worker.py  shared_worker.py  utils.py
shared/biosimulations_runutils/: README.md
temporal/: activities.py  biosim_api.py  biosim_models.py  main_workflow.py  simulator_run_workflow.py  trigger_workflow.py  worker.py
tests/: conftest.py  hdf5_file.json  main.py  temp_temporal.py  test_hdf5_json.py  test_mongo.py
tests/api/: test_main.py
tests/biosim1/: test_hdf5_json.py
tests/biosim_omex/: test_database.py
tests/biosim_runs/: test_biosim1_client.py  test_database.py  test_sim_workflow.py
tests/biosim_verify/: test_omex_verify_workflows.py  test_runs_verify_workflow.py
tests/common/: test_biosim1_client.py  test_database_service.py  test_file_service.py  test_gcs_utils.py  test_hdf5_json.py  test_mongo.py  test_s3_aiobotocore_utils.py  test_slurm_service.py  test_ssh_service.py
tests/database/: test_mongo.py
tests/fixtures/: biosim_fixtures.py  biosim_service_mock.py  database_fixtures.py  gcs_fixtures.py  s3_fixtures.py  slurm_fixtures.py  temporal_fixtures.py  workflow_fixtures.py
tests/io/: test_file_service.py  test_s3_aiobotocore_utils.py
tests/verification_request/: biomodels.json
tests/workflows/: test_hdf5_compare.py  test_omex_verify_workflows.py  test_runs_verify_workflow.py  test_sim_workflow.py  test_temporal.py  test_verify_workflow.py  test_verify_workflows.py
worker/: __init__.py  data_generator.py  data_model.py  job.py  main.py  pyproject  tests.py  utils.py
(+80 files in other folders)
