[tool.poetry]
name = "bsvs-server"
version = "0.0.1"
description = "Server for the Biological Simulation Result Verification Service (bsvs)"
authors = ["Alex Patrie <alexanderpatrie@gmail.com>, Jim Schaff <schaff@uchc.edu>"]
readme = "README.md"
include = ["pyproject.toml"]
packages = [
    {include = "biosim_server"},
    {include = "tests"},
]


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
uvicorn = "^0.34.0"
pyyaml = "^6.0.2"
numpy = "^2.2.1"
pandas = "^2.2.3"
chardet = "^5.2.0"
temporalio = "^1.9.0"
aiofiles = "^24.1.0"
aiohttp = "^3.11.11"
motor = "^3.6.0"


[tool.poetry.group.worker.dependencies]
python-libsbml = "^5.20.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.5.1"
types-requests = "^2.32.0"
types-aiofiles = "^24.1.0.20241221"
types-pyyaml = "^6.0.12.20241230"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "archive.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=setup.py"
python_files = "main.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

