[tool.poetry]
name = "biosim-server"
version = "0.2.1"
description = "Server for the consolidated Biosimulations API"
authors = ["Alex Patrie <alexanderpatrie@gmail.com>, Jim Schaff <schaff@uchc.edu>"]
readme = "README.md"
include = ["pyproject.toml"]
packages = [
    {include = "biosim_server"},
    {include = "tests"},
]


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
uvicorn = "^0.34.0"
pyyaml = "^6.0.2"
numpy = "^2.2.1"
pandas = "^2.2.3"
chardet = "^5.2.0"
temporalio = "^1.9.0"
aiohttp = "^3.11.11"
motor = {extras = ["srv"], version = "^3.6.0"}
pydantic-settings = "^2.7.1"
python-multipart = "^0.0.20"
gcloud-aio-storage = "^9.3.0"
h5py = "^3.12.1"
aiocache = "^0.12.3"
asyncssh = "^2.19.0"


[tool.poetry.group.worker.dependencies]
python-libsbml = "^5.20.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.5.1"
types-requests = "^2.32.0"
types-aiofiles = "^24.1.0.20241221"
types-pyyaml = "^6.0.12.20241230"
motor-types = "^1.0.0b4"
pytest-asyncio = "^0.25.0"
types-aiobotocore = "^2.16.1"
testcontainers = {extras = ["mongodb"], version = "^4.9.0"}
httpx = "^0.28.1"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "archive.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=setup.py"
python_files = "main.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

