[tool.poetry]
name = "biosim-server"
version = "0.2.2"
description = "Server for the consolidated Biosimulations API"
authors = ["Alex Patrie <alexanderpatrie@gmail.com>, Jim Schaff <schaff@uchc.edu>"]
readme = "README.md"
include = ["pyproject.toml"]
packages = [
    {include = "biosim_server"},
    {include = "tests"},
]


[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.1.0"
fastapi = "^0.115.12"
pydantic = "^2.11.0"
uvicorn = "^0.34.0"
pyyaml = "^6.0.2"
numpy = "^2.2.4"
pandas = "^2.2.3"
chardet = "^5.2.0"
temporalio = "^1.10.0"
aiohttp = "^3.11.14"
motor = {extras = ["srv"], version = "^3.7.0"}
pydantic-settings = "^2.8.1"
python-multipart = "^0.0.20"
gcloud-aio-storage = "^9.4.0"
h5py = "^3.13.0"
aiocache = "^0.12.3"
asyncssh = "^2.20.0"


[tool.poetry.group.worker.dependencies]
python-libsbml = "^5.20.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250306"
types-aiofiles = "^24.1.0.20250326"
types-pyyaml = "^6.0.12.20250326"
motor-types = "^1.0.0b4"
pytest-asyncio = "^0.26.0"
types-aiobotocore = "^2.21.1"
testcontainers = {extras = ["mongodb"], version = "^4.9.2"}
httpx = "^0.28.1"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "archive.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=setup.py"
python_files = "main.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

